<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".authenticationActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/auth_page_bg"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"></RelativeLayout>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="40dp"
            app:cardElevation="12dp"
            app:cardCornerRadius="20dp"
            android:paddingVertical="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editTextTextEmailAddress2"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    app:boxCornerRadiusBottomEnd="25dp"
                    app:boxCornerRadiusBottomStart="25dp"
                    app:boxCornerRadiusTopEnd="25dp"
                    app:boxCornerRadiusTopStart="25dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/auth_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_baseline_account_circle_24"
                        android:drawablePadding="4dp"
                        android:drawableTint="@color/edit_text_drawable_theme"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editTextTextEmailAddress3"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/password"
                    android:paddingBottom="8dp"
                    app:boxCornerRadiusBottomEnd="25dp"
                    app:boxCornerRadiusBottomStart="25dp"
                    app:boxCornerRadiusTopEnd="25dp"
                    app:boxCornerRadiusTopStart="25dp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/auth_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="4dp"
                        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
                        android:drawableTint="@color/edit_text_drawable_theme"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/button"
            android:fontFamily="@font/regular"
            android:paddingHorizontal="30dp"
            android:text="@string/loginbtn"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <ProgressBar
            android:id="@+id/progress_bar_auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.ProgressBar"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="8dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/regular"
                android:text="@string/newUserQues"
                android:textSize="12dp" />

            <Button
                android:id="@+id/btnToSignup"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="116dp"
                android:layout_height="40dp"
                android:fontFamily="@font/regular"
                android:text="@string/signupbtn"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>









